# vision-extract

./: .gitignore  README.md  README.md.old  pyproject.toml
vision/: db.sqlite3
vision/extractions/: apps.py  urls.py  views.py
vision/extractions/services/: ai_service.py  ai_service_agent.py
vision/pdf_viewer/: test_image_converter.py  urls.py  utils.py  views.py
vision/pdf_viewer/templates/pdf_viewer/: index.html
vision/vision/: settings.py  urls.py
